RESOLVED FIXED 256514
HTML->NSAttributedString loses <blockquote>s
https://bugs.webkit.org/show_bug.cgi?id=256514
Summary HTML->NSAttributedString loses <blockquote>s
Gerald Squelart
Reported 2023-05-09 00:59:05 PDT
rdar://105853449 (block quote level info is not encoded in the paragraph style)
Attachments
Gerald Squelart
Comment 1 2023-05-09 01:04:59 PDT
EWS
Comment 2 2023-05-09 17:08:45 PDT
Committed 263887@main (2df01fbd82d9): <https://commits.webkit.org/263887@main> Reviewed commits have been landed. Closing PR #13632 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.