HTML <blockquote>s are preserved in NSAttributedStrings' NSPresentationIntents https://bugs.webkit.org/show_bug.cgi?id=256514 rdar://105853449

Reviewed by Wenson Hsieh.

Block quotes are converted to NSPresentationIntents (of kind NSPresentationIntentKindBlockQuote), which may be nested as appropriate.

* Source/WebCore/PAL/pal/ios/UIKitSoftLink.h:
* Source/WebCore/PAL/pal/ios/UIKitSoftLink.mm:
* Source/WebCore/PAL/pal/spi/cocoa/NSAttributedStringSPI.h:
* Source/WebCore/editing/cocoa/AttributedString.h:
* Source/WebCore/editing/cocoa/AttributedString.mm:
(WebCore::toNSObject):
(WebCore::extractValue):
* Source/WebCore/editing/cocoa/HTMLConverter.mm:
(HTMLConverter::HTMLConverter):
(HTMLConverter::computedAttributesForElement):
(HTMLConverter::_enterBlockquote):
(HTMLConverter::_exitBlockquote):
(HTMLConverter::_enterElement):
(HTMLConverter::_exitElement):
* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm:
(IPC::shouldEnableStrictMode):
Don't force strict secure coding on NSPresentationIntents (similar to NSParagraphStyles). Filed rdar://109121874 for follow-up.

* Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.serialization.in:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/NSAttributedStringWebKitAdditions.mm:

Canonical link: https://commits.webkit.org/263887@main